--- a/package.json
+++ b/package.json
@@ -1,13 +1,33 @@
 {
   "name": "tree-gift-shop",
   "version": "0.1.0",
+  "description": "A shop for buying tree gift cards. You buy, we plant. Why buy flowers if you can buy a tree? It's good for your marriage AND the environment!",
+  "keywords": [
+    "tree",
+    "gift",
+    "flower",
+    "co2",
+    "environment",
+    "planet",
+    "earth",
+    "plant",
+    "card"
+  ],
+  "author": "Adrian Fabjanski, Johanna von Horn, Morgane Kermer, Yuliya Kalcheva",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mkermer/Tree-Gift-Shop.git"
+  },
+  "license": "ISC",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
