--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   "license": "ISC",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.0",
+    "@stripe/react-stripe-js": "^1.2.0",
+    "@stripe/stripe-js": "^1.11.0",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
-    "framer-motion": "^3.2.1",
     "cors": "^2.8.5",
+    "framer-motion": "^3.2.1",
     "mysql": "^2.18.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
