--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "confetti": "^1.1.1",
     "cors": "^2.8.5",
     "framer-motion": "^3.2.1",
     "mysql": "^2.18.1",
@@ -35,6 +36,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-icons": "^1.2.3",
+    "react-confetti": "^6.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.3.1",
