--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "local-storage": "^2.0.0",
     "mysql": "^2.18.1",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.17",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-icons": "^1.2.3",
