--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^1.6.13",
     "@stripe/react-stripe-js": "^1.2.0",
     "@stripe/stripe-js": "^1.11.0",
     "@testing-library/jest-dom": "^5.11.8",
