--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "react-bootstrap-icons": "^1.2.3",
     "react-confetti": "^6.0.0",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.3.1",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
     "reactstrap": "^8.8.1",
+    "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
