--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "aos": "^2.3.4",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "confetti": "^1.1.1",
